--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-auth": "5.0.0-beta.3",
     "prisma": "^5.13.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
     "@types/node": "^20",
