--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/prisma-adapter": "1.0.6",
     "@nextui-org/react": "^2.3.5",
     "@prisma/client": "^5.13.0",
+    "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
     "next": "14.2.2",
     "next-auth": "5.0.0-beta.3",
