--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-loader-spinner": "^6.1.6"
+    "react-loader-spinner": "^6.1.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
